--- a/package.json
+++ b/package.json
@@ -20,6 +20,11 @@
     "@capacitor/status-bar": "7.0.3",
     "@ionic/react": "^8.5.0",
     "@ionic/react-router": "^8.7.7",
+    "@polkadot/api": "^16.5.3",
+    "@polkadot/keyring": "^13.5.9",
+    "@polkadot/types": "^16.5.3",
+    "@polkadot/util-crypto": "^13.5.9",
+    "buffer": "^5.7.1",
     "graphql": "^16.9.0",
     "ionicons": "^7.4.0",
     "react": "19.0.0",
@@ -28,6 +33,8 @@
   },
   "devDependencies": {
     "@capacitor/cli": "7.4.3",
+    "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
+    "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
     "@testing-library/dom": ">=7.21.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^16.2.0",
