--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "typescript": "^5.1.6",
     "typescript-eslint": "^8.24.0",
     "vite": "~5.2.0",
+    "vite-plugin-node-polyfills": "^0.24.0",
     "vite-plugin-pwa": "^0.20.0",
     "vitest": "^0.34.6"
   },
