--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@polkadot/util-crypto": "^13.5.9",
     "buffer": "^5.7.1",
     "graphql": "^16.9.0",
+    "history": "^5.3.0",
     "ionicons": "^7.4.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
