--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "ionicons": "^7.4.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "react-router-dom": "^7.10.1",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
