--- a/package.json
+++ b/package.json
@@ -26,11 +26,12 @@
     "@polkadot/util-crypto": "^13.5.9",
     "buffer": "^5.7.1",
     "graphql": "^16.9.0",
-    "history": "^5.3.0",
+    "history": "^4.10.1",
     "ionicons": "^7.4.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-router-dom": "^7.10.1",
+    "react-router": "^5.3.4",
+    "react-router-dom": "^5.3.4",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
