--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@polkadot/keyring": "^13.5.9",
     "@polkadot/types": "^16.5.3",
     "@polkadot/util-crypto": "^13.5.9",
+    "@types/telegram-web-app": "^9.1.1",
     "buffer": "^5.7.1",
     "graphql": "^16.9.0",
     "history": "^4.10.1",
