--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dom": "19.0.0",
     "react-router": "^5.3.4",
     "react-router-dom": "^5.3.4",
+    "socket.io-client": "^4.8.3",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
