enhancement: winning number modal ui

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@polkadot/util-crypto": "^13.5.9",
     "@types/telegram-web-app": "^9.1.1",
     "buffer": "^5.7.1",
+    "canvas-confetti": "^1.9.4",
     "graphql": "^16.9.0",
     "history": "^4.10.1",
     "ionicons": "^7.4.0",
@@ -44,6 +45,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^14.4.3",
+    "@types/canvas-confetti": "^1.9.0",
     "@types/react": "19.0.10",
     "@types/react-dom": "19.0.4",
     "@vitejs/plugin-legacy": "^5.0.0",
